# clouddrift

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MODEL_CARD.md  README.md  TECHNICAL_SPEC.md  compose.yml  day4_if_training_smd.py  day5_tcn_recovery.py  day5_tcn_training_smd.py  day6_ensemble_smd.py  day6b_weight_sweep.py  day6c_metrics_sweep.py  generate_api_artifacts.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/routers/: detection.py  health.py
api/schemas/: __init__.py  telemetry.py
api/services/: __init__.py  detection.py  metrics.py  observability.py
artifacts/: api_reference_stats.json  ensemble_metadata.json  feature_metadata.json  metrics.json  reference_stats.json
dashboard/: __init__.py  app.py  drift_monitor.py
data/processed/: alibaba_quality_report.json  nab_quality_report.json
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  MONITORING_GUIDE.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-isolation-forest.md  ADR-002-autoencoder-architecture.md  ADR-003-fastapi.md  ADR-004-ruff.md  ADR-005-uv.md  ADR-006-pytorch-lightning.md
logs/: docker_build_mainmerge-2
monitoring/: prometheus.yml
notebooks/: 01_data_profiling.ipynb  02_feature_engineering.ipynb  03_isolation_forest.ipynb  04_tcn_autoencoder.ipynb  05_ensemble_scoring.ipynb  06_shap_analysis.ipynb
scripts/: day4_if_training_smd.py  day5_tcn_recovery.py  day5_tcn_training_smd.py  day6_ensemble_smd.py  day6b_weight_sweep.py  day6c_metrics_sweep.py  generate_api_artifacts.py
src/: __init__.py
src/data/: __init__.py  ingestion.py  validation.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py  ensemble.py  isolation_forest.py  tcn_autoencoder.py
src/utils/: __init__.py  artifacts.py  explanation.py
tests/: __init__.py  test_api.py  test_ci.py  test_dashboard.py  test_docker.py  test_ensemble.py  test_features.py  test_ingestion.py  test_isolation_forest.py  test_placeholder.py  test_shap_artifacts.py  test_tcn_autoencoder.py
